# doki

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
doki_api/: main.py  routes.py
scraper/scraper/: __init__.py  docs_spider.py
src/doki/: chains.py  config.py  ingestion.py  retrieval.py
tools/: run_ingest.py  run_scraper.py
